--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <title>My test page</title>
   </head>
   <body>
-    <p>This is my page</p>
+    <p><h1>「WEBコンテンツ作成」の成果</h1></p>
+    <h2>本テーマのついて</h2>
+    <p>Webコンテンツ作成の授業を通して私は、Webコンテンツについての基本的な理解と実践的なスキルを身につけることです。
+      目標は、HTML、CSS、JavaScriptなどの技術を用いて、魅力的で機能的なウェブサイトを構築できるようになることです。</p>
+      <h2>プロジェクト課題について</h2>
+      <p>プロジェクト課題で作成したページ:</p>
+      <h2>数当てゲーム</h2>
+      <p>数当てゲームのページ:kazuate.html</p>
+      <h2>各授業回の学習事項</h2>
+      <h2>第1回 WWW と HTML</h2>
+      <p>今回の授業で学んだことは、HTMLの要素や属性、文章構成について学びました。
+        HTMLでは、見出し、段落、リンク、画像などを定義する方法を習得しました。これにより、基本的なウェブページの作成と、ブラウザがHTML文書をどのように解釈して表示するかを理解することができました。</p>
+        <p>演習の成果:<a href="elements.html"
+			    target="_blank">演習 1-4: HTMLのさまざまな要素</a></p>
+      <h2>第2回 CSS による WEB ページの装飾</h2>
+      <h2>第3回 JavaScript の基本</h2>
+      <h2>第4回 DOM と Javascript</h2>
+      <h2>第5回 イベント処理</h2>
+
+
   </body>
 </html>
