--- a/practice-html/elements.html
+++ b/practice-html/elements.html
@@ -26,7 +26,7 @@
 		<h2>ハイパーリンク</h2>
 			<p><a href="structure.html" 
 				target="_blank">演習1-3のHTMLファイル</a></p>
-			<p><a herf="../index.html"
+			<p><a href="../index.html"
 			    target="_blank">index.html</a></p>
 		<h2>宇宙望遠鏡(Wikipedia 「宇宙望遠鏡」より)</h2>
 		<dl>
