--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <p>Webコンテンツ作成の授業を通して私は、Webコンテンツについての基本的な理解と実践的なスキルを身につけることです。
       目標は、HTML、CSS、JavaScriptなどの技術を用いて、魅力的で機能的なウェブサイトを構築できるようになることです。</p>
       <h2>プロジェクト課題について</h2>
-      <p>プロジェクト課題で作成したページ:</p>
+      <p>プロジェクト課題で作成したページ:<a href="../project.html"
+        target="_blank">project.html</a></p>
       <h2>数当てゲーム</h2>
       <p>数当てゲームのページ:kazuate.html</p>
       <h2>各授業回の学習事項</h2>
