--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h2>第1回 WWW と HTML</h2>
       <p>今回の授業で学んだことは、HTMLの要素や属性、文章構成について学びました。
         HTMLでは、見出し、段落、リンク、画像などを定義する方法を習得しました。これにより、基本的なウェブページの作成と、ブラウザがHTML文書をどのように解釈して表示するかを理解することができました。</p>
-        <p>演習の成果:<a href="elements.html"
+        <p>演習の成果:<a href="practice-html/elements.html"
 			    target="_blank">演習 1-4: HTMLのさまざまな要素</a></p>
       <h2>第2回 CSS による WEB ページの装飾</h2>
       <h2>第3回 JavaScript の基本</h2>
