--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My test page</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <p><h1>「WEBコンテンツ作成」の成果</h1></p>
@@ -21,6 +22,9 @@
         <p>演習の成果:<a href="practice-html/elements.html"
 			    target="_blank">演習 1-4: HTMLのさまざまな要素</a></p>
       <h2>第2回 CSS による WEB ページの装飾</h2>
+      <p>CSSは、HTMLなどのマークアップ言語で書かれたWebページの見た目やレイアウトを制御するスタイルシート言語です。CSSを使用すると、フォント、色、間隔、配置、アニメーションなどのビジュアル要素を効率的に設定し自分の好みに合わせたでサインをすることができる。</p>
+      <p>演習の成果:<a href="practice-css/browser-into.html"
+        target="_blank">練習問題2-3</a></p>
       <h2>第3回 JavaScript の基本</h2>
       <h2>第4回 DOM と Javascript</h2>
       <h2>第5回 イベント処理</h2>
