--- a/project.html
+++ b/project.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>世界の天気</title>
+    <script src="weather.js" defer></script>
    </head>
    <body>
     <p id="1850147" ></p>
