--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <p>演習の成果:<a href="practice-css/browser-intro.html"
         target="_blank">練習問題2-3</a></p>
       <h2>第3回 JavaScript の基本</h2>
+      JavaScriptは、プログラムを通じて HTML 要素や属性,CSS などの追加・編集・削除を可能にしてくれます.また、javaとjavascriptでは少し書き方が違うので注意して書きます.
+      <p>演習の成果:<a href="practice-js/obj-practice.html"
+        target="_blank">練習問題3-6</a></p>
       <h2>第4回 DOM と Javascript</h2>
       <h2>第5回 イベント処理</h2>
 
