--- a/project.html
+++ b/project.html
@@ -6,7 +6,6 @@
     <script src="weather.js" defer></script>
    </head>
    <body>
-    <p id="1850147" ></p>
     <p>世界の天気(検索結果1件)</p>
     <ul>
         <li>緯度:116.3972</li>
@@ -19,5 +18,6 @@
         <li>風向:197</li>
         <li>都市名:北京市</li>
     </ul>
+    <div id ="result"></div>
    </body>
 </html>
