--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       <p>演習の成果:<a href="practice-js/obj-practice.html"
         target="_blank">練習問題3-6</a></p>
       <h2>第4回 DOM と Javascript</h2>
+      JavaScriptのDOM操作は、ウェブページのHTML要素を動的に変更する方法です。要素の検索をしたり、テキストの変更,CSSを変更や新しい要素の追加、そして要素の削除などできることがたくさんあります。
+      <p>演習の成果:<a href="practice-dom/dom-exercise.html"
+        target="_blank">練習問題4-2から練習問題4-5</a></p>
       <h2>第5回 イベント処理</h2>
 
 
