--- a/project.html
+++ b/project.html
@@ -6,7 +6,9 @@
     <script src="weather.js" defer></script>
    </head>
    <body>
-    
-    <div id ="result"></div>
+    <label for="tenki">都市名:</label>
+    <input type="text" name="tenki" size="100">
+    <button id="print"></button>
+    <div id ="result">検索</div>
    </body>
 </html>
