--- a/project.html
+++ b/project.html
@@ -8,7 +8,7 @@
    <body>
     <label for="tenki">都市名:</label>
     <input type="text" name="tenki" size="10">
-    <button id="print"></button>
-    <div id ="result">検索</div>
+    <button id="print">検索</button>
+    <div id ="result"></div>
    </body>
 </html>
