--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <p>演習の成果:<a href="practice-dom/dom-exercise.html"
         target="_blank">練習問題4-2から練習問題4-5</a></p>
       <h2>第5回 イベント処理</h2>
-
-
-  </body>
+      クリックというイベントを実行したら見出しの文字を変更したり、背景色をランダムに変更したりするプログラムをHTMLやjacascriptを駆使して作った。javascriptではイベントハンドラの登録や定義を行いHTMLではボタンを配置する設定を施しています。
+      <p>演習の成果:<a href="practice-event/event-list.html"
+        target="_blank">練習問題5-3</a></p>
 </html>
