--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         target="_blank">project.html</a></p>
       <h2>数当てゲーム</h2>
       <p>数当てゲームのページ:<a href="../kazuate.html"
-        target="_blank">project.html</a></p>
+        target="_blank">kazuate.html</a></p>
       <h2>第1回 WWW と HTML</h2>
       <p>今回の授業で学んだことは、HTMLの要素や属性、文章構成について学びました。
         HTMLでは、見出し、段落、リンク、画像などを定義する方法を習得しました。これにより、基本的なウェブページの作成と、ブラウザがHTML文書をどのように解釈して表示するかを理解することができました。</p>
