--- a/project.html
+++ b/project.html
@@ -8,6 +8,11 @@
    <body>
     <label for="tenki">都市名:</label>
     <input type="text" name="tenki" size="10">
+    <select name="sekaitenki" id ="sekaitenki">
+      <option value="">世界の天気を選んでください</option>
+      <potion value="tokyo">東京</potion>
+      <potion value="pekin">北京</potion>
+    </select>
     <button id="print">検索</button>
     <div id ="result"></div>
    </body>
