--- a/project.html
+++ b/project.html
@@ -9,8 +9,8 @@
     <label for="tenki">都市名:</label>
     <select name="sekaitenki" id ="sekaitenki">
       <option value="">世界の天気を選んでください</option>
-      <potion value="tokyo">東京</potion>
-      <potion value="pekin">北京</potion>
+      <option value="tokyo">東京</option>
+      <option value="pekin">北京</option>
     </select>
     <button id="print">検索</button>
     <div id ="result"></div>
