--- a/project.html
+++ b/project.html
@@ -7,10 +7,19 @@
    </head>
    <body>
     <label for="tenki">都市名:</label>
-    <select name="sekaitenki" id ="sekaitenki">
-      <option value="">世界の天気を選んでください</option>
-      <option value="tokyo">東京</option>
-      <option value="pekin">北京</option>
+    <select name="tenki" id ="tenki">
+      <option value="">国を選んでください</option>
+      <option value="360630">カイロ(エジプト)</option>
+      <option value="524901">ヨハネスブルク(南アフリカ)</option>
+      <option value="1816670">北京</option>
+      <option value="1850147">東京</option>
+      <option value="1880252">シンガポール</option>
+      <option value="2147714">シドニー(オーストラリア)</option>
+      <option value="2643743">ロンドン(イギリス)</option>
+      <option value="2968815">パリ(フランス)</option>
+      <option value="3451189">リオデジャネイロ(ブラジル)</option>
+      <option value="5128581">ニューヨーク(アメリカ合衆国)</option>
+      <option value="5368361">ロサンゼルス(アメリカ合衆国)</option>
     </select>
     <button id="print">検索</button>
     <div id ="result"></div>
