--- a/project.html
+++ b/project.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>世界の天気</title>
     <script src="weather.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"></script>
    </head>
    <body>
     <label for="tenki">都市名:</label>
