--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <p>Webコンテンツ作成の授業を通して私は、Webコンテンツについての基本的な理解と実践的なスキルを身につけることです。
       目標は、HTML、CSS、JavaScriptなどの技術を用いて、魅力的で機能的なウェブサイトを構築できるようになることです。</p>
       <h2>プロジェクト課題について</h2>
+      <p>私は、世界の天気についてのプロジェクト課題について作成しました。今回の全体の授業を通してHTMLやCSS、Javascriptの使い方やイベント処理、通信処理を学びそれを全て駆使してプロジェクト課題を作りました。イベント処理では、プルダウンメニューを使い全ての国の天気が検索しやすいようにし、全体的に見やすいようにしました。
+        また、CSSではふんわりするような柔らかい色合いの雰囲気の感じで作成しました。
+      </p>
       <p>プロジェクト課題で作成したページ:<a href="../project.html"
         target="_blank">project.html</a></p>
       <h2>数当てゲーム</h2>
+      <p></p>
       <p>数当てゲームのページ:<a href="../kazuate.html"
         target="_blank">kazuate.html</a></p>
       <h2>第1回 WWW と HTML</h2>
@@ -37,4 +41,5 @@
       クリックというイベントを実行したら見出しの文字を変更したり、背景色をランダムに変更したりするプログラムをHTMLやjacascriptを駆使して作った。javascriptではイベントハンドラの登録や定義を行いHTMLではボタンを配置する設定を施しています。
       <p>演習の成果:<a href="practice-event/event-list.html"
         target="_blank">練習問題5-3</a></p>
+        <p>工夫点、苦心点、強調点、感想</p>
 </html>
