--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
       <p>プロジェクト課題で作成したページ:<a href="../project.html"
         target="_blank">project.html</a></p>
       <h2>数当てゲーム</h2>
-      <p></p>
+      <p>
+        javascriptやHTMLを使って数当てゲームを作成しました。
+        乱数で1~10の値をランダムで1つ決めてそれを答えとする。答える人は答えを予想する。ただし、予想する回数は最大で3回となりそれ以降は答えを教えてくれるようにする。
+        また、答えた人の予想が違かった場合、入力した値よりも答えが大きければ「まちがい.答えはもっと大きいですよ」入力した値よりも小さければ「まちがい.答えはもっと小さいですよ」と出力できるようにする。
+        3回以内に答えの数を当てれば勝ち、そうでなければ負けとなる。またページには、テキストボックスとボタンを設置するようにしてそこに答える人は1~10の値を入力する。回答というボタンを押せばプログラムが起動して実際にゲームが始まります。
+      </p>
       <p>数当てゲームのページ:<a href="../kazuate.html"
         target="_blank">kazuate.html</a></p>
       <h2>第1回 WWW と HTML</h2>
