--- a/index.html
+++ b/index.html
@@ -46,5 +46,13 @@
       クリックというイベントを実行したら見出しの文字を変更したり、背景色をランダムに変更したりするプログラムをHTMLやjacascriptを駆使して作った。javascriptではイベントハンドラの登録や定義を行いHTMLではボタンを配置する設定を施しています。
       <p>演習の成果:<a href="practice-event/event-list.html"
         target="_blank">練習問題5-3</a></p>
-        <p>工夫点、苦心点、強調点、感想</p>
+      <h2>工夫点,苦心点,強調点,感想</h2>
+      <p>今回のWebコンテンツ作成を通じて、Webの作成についての基本的技術を学ぶことができ、大きな達成感を感じました。最初はとても難しく感じましたが実際に手を動かしてプロジェクトを進めるうちにだんだんと理解が深まっていきました。
+        また、問題に直面した時に自分で解決方法を調べて試行錯誤をしたり、先生にわからなかったことを聞いたりなどをすることによってより理解が深まり今回の授業で学んだ実践的なスキルが身につけられたと思います。個人的には、数当てゲームを作成するのにとても苦労しましたが最後までやりきり正常に作動した時はとても達成感を感じました。
+        このwebコンテンツ作成では、いくつかの苦心点がありました。まず、HTMLやCSS、JavaScript、dom、イベント処理などの各スキルの習得にとても時間がかかったことです。HTMLやCSS、Javascriptなどはそれぞれ異なる特性を持ち、それらを掛け合わせることで1つのwebページを作ることはとても複雑で大変でした。
+        また、授業内で学習内容を理解していても時間が経ってしまうと前やっていたことを忘れているので、定期的にwebコンテンツ作成の講義資料を見直したり実際にCSSを見やすいような彩りにしたりなど工夫して授業に取り組みました。
+        これらのスキルを学ぶ過程で感じたことは、Web開発の奥深さとその可能性の広がりです。HTML、CSS、JavaScriptはそれぞれが独立した技術でありながら、相互に補完し合うことで、より豊かなWebコンテンツを作成することができます。特に、JavaScriptを用いたDOM操作やイベント処理を学ぶことで、静的なページから動的で生き生きとしたページへと進化させることができる点が非常に魅力的でした。
+        また、学習過程で直面した課題や問題を解決することで、問題解決能力や論理的思考力が鍛えられました。エラーやバグに対処するためには、コードを丁寧に読み解き、原因を特定し、修正するスキルが必要です。この過程で得た知識や経験は、今後のWeb開発においても大いに役立つと感じています。
+        総じて、Webコンテンツ作成におけるHTML、CSS、JavaScript、DOM、およびイベント処理の学習は、技術的なスキルの向上と共に、自分自身の成長を実感できる貴重な経験となりました。これからも新しい技術やトレンドを追い続け、さらなるスキルアップを目指していきたいと思います。
+      </p>
 </html>
