--- a/project.html
+++ b/project.html
@@ -12,6 +12,7 @@
     <select name="tenki" id ="tenki">
       <option value="">国を選んでください</option>
       <option value="360630">カイロ(エジプト)</option>
+      <option value="524901">モスクワ(ロシア)</option>
       <option value="524901">ヨハネスブルク(南アフリカ)</option>
       <option value="1816670">北京</option>
       <option value="1850147">東京</option>
