--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p>私は、世界の天気についてのプロジェクト課題について作成しました。今回の全体の授業を通してHTMLやCSS、Javascriptの使い方やイベント処理、通信処理を学びそれを全て駆使してプロジェクト課題を作りました。イベント処理では、プルダウンメニューを使い全ての国の天気が検索しやすいようにし、全体的に見やすいようにしました。
         また、CSSではふんわりするような柔らかい色合いの雰囲気の感じで作成しました。
       </p>
-      <p>プロジェクト課題で作成したページ:<a href='../project.html'
+      <p>プロジェクト課題で作成したページ:<a href="project.html"
         target="_blank">project.html</a></p>
       <h2>数当てゲーム</h2>
       <p>
@@ -23,7 +23,7 @@
         また、答えた人の予想が違かった場合、入力した値よりも答えが大きければ「まちがい.答えはもっと大きいですよ」入力した値よりも小さければ「まちがい.答えはもっと小さいですよ」と出力できるようにする。
         3回以内に答えの数を当てれば勝ち、そうでなければ負けとなる。またページには、テキストボックスとボタンを設置するようにしてそこに答える人は1~10の値を入力する。回答というボタンを押せばプログラムが起動して実際にゲームが始まります。
       </p>
-      <p>数当てゲームのページ:<a href='../kazuate.html'
+      <p>数当てゲームのページ:<a href="kazuate.html"
         target="_blank">kazuate.html</a></p>
       <h2>第1回 WWW と HTML</h2>
       <p>今回の授業で学んだことは、HTMLの要素や属性、文章構成について学びました。
